# PrivateTable

./: .gitignore  README.md  accountant.py  calculate_moment.py  federated_learning.py  main.py  privacy_budget_tracker.py  private_machine_learning.ipynb  private_machine_learning.py  private_machine_learning_example.py  private_mechanisms.py  private_table.py  pyproject.toml  requirements.txt  setup.cfg  test_private_machine_learning.py  utils.py
docs/: dev.md
examples/: private_machine_learning copy.ipynb  private_machine_learning.ipynb
tasks/: 01-statistical-functions.md
tests/: adult_test.py  test_adult_table.py  test_data_domain.py  test_iris_table.py  test_privacy_budget.py  test_private_table.py
