[tool.poetry]
name = "privatetable"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.autopep8]
max-line-length = 120
indent-size = 4

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
pytest = "^6.1.1"
autopep8 = "^1.5.4"
isort = "^5.6.4"
mypy = "^0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
